# AiML-credit-risk---loan-optimization-ml

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
models/: credit_assessment_model.joblib  credit_score_model.pkl  risk_prob_lr_model.pkl
notebooks/: credit_risk_assessment.ipynb  data_cleaning.ipynb  feature_engineering.ipynb  model_building.ipynb  risk_probability_lr_model_20240726-014502.pickle
scripts/: credit_risk_assessment.py  credit_score.py  data_cleaner.py  data_loader.py  eda.py  feature_engineering.py  m.py  t.py
tests/: __init__.py
