[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "0.0.1"
description = "Bati Bank, a leading financial service provider, is partnering with an eCommerce company to enable a buy-now-pay-later service. As an Analytics Engineer at Bati Bank, I have been tasked with developing a credit scoring model to evaluate the creditworthiness of potential borrowers. The model will use transaction data provided by the eCommerce platform to define a proxy variable for categorizing users as high-risk or low-risk, select relevant features that predict the default variable, and build models to assign risk probabilities, credit scores, and optimal loan amounts and durations. This project aims to create a robust and reliable credit scoring system to support Bati Bank's new buy-now-pay-later offering and ensure responsible lending practices."
authors = [
  { name = "Daniel Andarge" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["scripts"]
force_sort_within_sections = true
